plugins {
  id 'java'
  id 'jvm-test-suite'
}

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(21)
  }
}

repositories {
  mavenCentral()
}

testing {
  suites {
    test {
      useJUnitJupiter()
      dependencies {
        implementation(libs.assertj)
      }
    }
  }
}

tasks.named('test') {
  dependsOn(':common:createTestIndex')
  jvmArgs = ["--enable-native-access=ALL-UNNAMED", "--add-modules", "jdk.incubator.vector"]
}

dependencies {
  implementation(libs.bundles.lucene)
}
